    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
12-Sep-2004:
   Problems fixed:
       1. bug #1025968: Cookies with max-age attribute will now expire (max-age=0 is treated as immediate expiration)
10-Sep-2004:
   Problems fixed:
       1. bug #1013045: Form, Link, and Image id tags are now recognizable from JavaScript where a name tag would be

 9-Sep-2004:
   Problems fixed:
       1. Slashes in URL parameters were being misinterpeted as navigation

 8-Sep-2004:
   Additions:
       1. ServletRunner and ServletUnitClient now support a getSession() method to return the HTTP session to be used
          by the next request or modified by the last request.

25-Aug-2004:
   Additions:
       1. ServletRunner now takes a reference to a web.xml as a File object in its constructor.

10-Aug-2004:
   Additions:
       1. rfe #901172: "application/xhtml+xml" is now recognized as a valid HTML "content-type"
       2. Added convenience method setParameter( String, File ) to simplify file uploading

 9-Aug-2004
   Problems fixed:
       1. When a form has no action specified and its URL contains parameters whose names match those of parameters
          in the form, the form values are used instead.

 8-Aug-2004
   Thanks to Guillaume Dandurand <Guillaume.Dandurand@cn.ca> for supplying code to get the onload event when the page
         is a frameset rather than a regular page.

   Problems fixed:
       1. A frameset 'onload' event is now invoked after all of its subframes have been loaded
       2. ServletUnit's HttpServletRequest.getCookies() method was only returning the first cookie defined in the request

   Additions: